--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zxx">
 
 <head>
-	<title>浙江科技学院计算机科学与技术152班</title>
+	<title>浙江科技大学计算机科学与技术152班</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta charset="utf-8">
 	<meta name="keywords" content="" />
